--- a/PowerizeSkeleton/nbproject/project.properties
+++ b/PowerizeSkeleton/nbproject/project.properties
@@ -43,7 +43,7 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=-docletpath /Users/wstomv/NetBeansProjects/PrePostDoclet.jar -doclet nl.tue.doclets.PrePostDoclet
+javadoc.additionalparam=-docletpath "D:\\Dropbox\\AA_uni\\2IPC0 Programming Methods\\2IPC0-2014_Student_Material\\downloads\\Series_1/PrePostDoclet.jar" -doclet nl.tue.doclets.PrePostDoclet
 javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
@@ -52,7 +52,7 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 main.class=
 manifest.file=manifest.mf
